--- a/index.html
+++ b/index.html
@@ -3,9 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Employee Payroll Access</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    
+
+    <div class="app-container">
+        <h1>Payroll Portal</h1>
+
+        <div id="loginScreen" class="card active">
+    <h2><i class="fas fa-lock"></i> Employee ID Access</h2> <div class="input-group">
+        <label for="loginID">Employee ID:</label>
+        <input type="text" id="loginID" placeholder="e.g., EMP001" required>
+    </div>
+    <button onclick="validateAndGrantAccess()" class="primary-btn">Access Dashboard</button> <p class="disclaimer">Use EMP001, EMP002, or EMP003 to test.</p>
+</div>
+        <!-- <div id="loginScreen" class="card active">
+            <h2><i class="fas fa-lock"></i> Employee Login</h2>
+            <div class="input-group">
+                <label for="loginID">Employee ID:</label>
+                <input type="text" id="loginID" placeholder="e.g., EMP001" required>
+            </div>
+            <button onclick="handleLogin()" class="primary-btn">Log In</button>
+            <p class="disclaimer">Use EMP001, EMP002, or EMP003 to test.</p>
+        </div> -->
+
+        <div id="dashboard" class="card hidden">
+            <h2 id="welcomeMsg">Welcome, Employee!</h2>
+            <div class="data-entry-grid">
+                <div class="input-group">
+                    <label for="bonusAmount"><i class="fas fa-gift"></i> This Month's Bonus ($):</label>
+                    <input type="number" id="bonusAmount" min="0" value="0">
+                </div>
+                <div class="input-group">
+                    <label for="holidaysTaken"><i class="fas fa-calendar-alt"></i> Holidays Taken (Days):</label>
+                    <input type="number" id="holidaysTaken" min="0" value="0">
+                </div>
+                <div class="input-group">
+                    <label for="lastPayment"><i class="fas fa-money-bill-wave"></i> Last Month's Net Pay ($):</label>
+                    <input type="number" id="lastPayment" min="0" value="3500">
+                </div>
+                <button onclick="calculateSalary()" class="primary-btn grid-span">Calculate Salary & Receipt</button>
+            </div>
+
+            <hr>
+
+            <div id="receiptSection" class="receipt-card hidden">
+                <h3><i class="fas fa-receipt"></i> Salary Receipt Summary</h3>
+                <div class="receipt-meta">
+                    <p>Employee: <strong id="receiptName"></strong></p>
+                    <p>ID: <strong id="receiptID"></strong></p>
+                </div>
+                
+                <div class="receipt-details">
+                    <div class="detail-item base">
+                        <label>Base Salary (Est.):</label>
+                        <span id="baseSalary">$0.00</span>
+                    </div>
+                    <div class="detail-item adjustment bonus">
+                        <label>Bonus Added:</label>
+                        <span id="bonusAdded">$0.00</span>
+                    </div>
+                    <div class="detail-item adjustment deduction">
+                        <label>Holiday Deduction (0.5x Base/Day):</label>
+                        <span id="holidayDeduction">$0.00</span>
+                    </div>
+                    <hr>
+                    <div class="detail-item net">
+                        <label>Total Net Pay:</label>
+                        <strong id="finalSalary">$0.00</strong>
+                    </div>
+                    <p class="paid-status"><i class="fas fa-check-circle"></i> This amount has been processed.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
