--- a/index.html
+++ b/index.html
@@ -2,333 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Employee Payroll Dashboard</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-        body {
-            background-color: #f8f9fa;
-            padding: 20px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-        .wrapper {
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-        .card {
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            padding: 25px;
-            margin-bottom: 25px;
-            border: none;
-        }
-        h1 {
-            color: #2c3e50;
-            text-align: center;
-            margin-bottom: 20px;
-            font-weight: 600;
-        }
-        h2 {
-            color: #34495e;
-            border-bottom: 2px solid #3498db;
-            padding-bottom: 12px;
-            margin-bottom: 20px;
-            font-weight: 600;
-            font-size: 1.4rem;
-        }
-        .stats-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 15px;
-            margin-bottom: 20px;
-        }
-        .stat-card {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 20px;
-            border-radius: 8px;
-            text-align: center;
-        }
-        .stat-number {
-            font-size: 2rem;
-            font-weight: bold;
-            margin: 10px 0;
-        }
-        .stat-label {
-            font-size: 0.9rem;
-            opacity: 0.9;
-        }
-        .search-box {
-            margin-bottom: 15px;
-        }
-        .search-results {
-            max-height: 300px;
-            overflow-y: auto;
-            border: 1px solid #e9ecef;
-            border-radius: 6px;
-            margin-top: 10px;
-            display: none;
-        }
-        .employee-item {
-            padding: 12px 15px;
-            border-bottom: 1px solid #e9ecef;
-            cursor: pointer;
-            transition: background-color 0.2s;
-        }
-        .employee-item:hover {
-            background-color: #f8f9fa;
-        }
-        .employee-item:last-child {
-            border-bottom: none;
-        }
-        .salary-form {
-            display: grid;
-            grid-template-columns: 1fr 1fr auto;
-            gap: 15px;
-            align-items: end;
-        }
-        .form-group {
-            margin-bottom: 0;
-        }
-        input, button, select {
-            padding: 12px;
-            border: 1px solid #ddd;
-            border-radius: 6px;
-            width: 100%;
-            box-sizing: border-box;
-        }
-        input:focus, select:focus {
-            outline: none;
-            border-color: #3498db;
-            box-shadow: 0 0 0 2px rgba(52, 152, 219, 0.2);
-        }
-        button {
-            background: linear-gradient(135deg, #3498db, #2980b9);
-            color: white;
-            border: none;
-            cursor: pointer;
-            transition: all 0.3s;
-            font-weight: 600;
-        }
-        button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-        }
-        button:disabled {
-            background: #95a5a6;
-            cursor: not-allowed;
-            transform: none;
-            box-shadow: none;
-        }
-        .btn-success {
-            background: linear-gradient(135deg, #27ae60, #2ecc71);
-        }
-        .btn-warning {
-            background: linear-gradient(135deg, #f39c12, #e67e22);
-        }
-        .salary-result {
-            margin-top: 20px;
-            padding: 20px;
-            background: linear-gradient(135deg, #e8f5e8, #d4edda);
-            border-radius: 8px;
-            border-left: 4px solid #28a745;
-            display: none;
-        }
-        .notification-item {
-            padding: 15px;
-            margin-bottom: 10px;
-            border-radius: 8px;
-            border-left: 4px solid #ffc107;
-            transition: all 0.3s;
-        }
-        .notification-item:hover {
-            transform: translateX(5px);
-        }
-        .notification-high {
-            background-color: #f8d7da;
-            border-left-color: #dc3545;
-        }
-        .notification-medium {
-            background-color: #fff3cd;
-            border-left-color: #ffc107;
-        }
-        .notification-low {
-            background-color: #d1ecf1;
-            border-left-color: #17a2b8;
-        }
-        .notification-committed {
-            background-color: #d4edda;
-            border-left-color: #28a745;
-            opacity: 0.8;
-        }
-        .audit-container {
-            max-height: 300px;
-            overflow-y: auto;
-            border: 1px solid #e9ecef;
-            border-radius: 6px;
-        }
-        .committed-badge {
-            background-color: #28a745;
-            color: white;
-            padding: 2px 8px;
-            border-radius: 4px;
-            font-size: 0.7em;
-            margin-left: 8px;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Employee Management System</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="wrapper">
-        <!-- Header -->
-        <div class="card">
-            <h1>🏢 Employee Payroll Dashboard</h1>
-            <div class="stats-container">
-                <div class="stat-card">
-                    <div class="stat-label">Total Employees</div>
-                    <div class="stat-number" id="totalEmployees">0</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-label">Pending Actions</div>
-                    <div class="stat-number" id="totalNotifications">0</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-label">Committed Payroll</div>
-                    <div class="stat-number" id="monthPayroll">$0</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-label">Departments</div>
-                    <div class="stat-number" id="totalDepartments">0</div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Employee Search & Salary Processing -->
-        <div class="card">
-            <h2>🔍 Employee Search & Salary Processing</h2>
-            <div class="search-box">
-                <input type="text" id="searchEmployee" placeholder="Search employees by name, ID, or department..." class="form-control">
-                <div id="searchResults" class="search-results"></div>
-            </div>
-            
-            <div class="salary-form">
+    <div class="login-container">
+        <div class="login-box">
+            <h2>Employee Management System</h2>
+            <form id="loginForm">
                 <div class="form-group">
-                    <label>Employee ID</label>
-                    <input type="number" id="empId" placeholder="Select from search" readonly>
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" name="username" required>
                 </div>
                 <div class="form-group">
-                    <label>Employee Name</label>
-                    <input type="text" id="empName" placeholder="Select from search" readonly>
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" required>
                 </div>
                 <div class="form-group">
-                    <label>Month & Year</label>
-                    <input type="month" id="monthYear" required>
+                    <label for="userType">Login As:</label>
+                    <select id="userType" name="userType" required>
+                        <option value="">Select User Type</option>
+                        <option value="employee">Employee</option>
+                        <option value="admin">Salary Admin</option>
+                    </select>
                 </div>
-                <div class="form-group">
-                    <label>&nbsp;</label>
-                    <button type="button" onclick="processSalary()">🧮 Process Salary</button>
-                </div>
-            </div>
-            
-            <div id="salaryResult" class="salary-result"></div>
-        </div>
-
-        <!-- Add New Employee
-        <div class="card">
-            <h2>👤 Add New Employee</h2>
-            <div class="salary-form">
-                <div class="form-group">
-                    <label>Name</label>
-                    <input type="text" id="newEmpName" placeholder="Full name">
-                </div>
-                <div class="form-group">
-                    <label>Salary</label>
-                    <input type="number" id="newEmpSalary" placeholder="Annual salary">
-                </div>
-                <div class="form-group">
-                    <label>Department</label>
-                    <input type="text" id="newEmpDept" placeholder="Department">
-                </div>
-                <div class="form-group">
-                    <label>Location</label>
-                    <input type="text" id="newEmpLocation" placeholder="Location">
-                </div>
-                <div class="form-group">
-                    <label>&nbsp;</label>
-                    <button type="button" onclick="addEmployee()" class="btn-success">+ Add Employee</button>
-                </div>
-            </div>
-        </div> -->
-
-        <!-- Add New Employee -->
-<div class="card">
-    <h2>👤 Add New Employee</h2>
-    <div class="row">
-        <div class="col-md-3">
-            <div class="form-group">
-                <label>Name</label>
-                <input type="text" id="newEmpName" placeholder="Full name" class="form-control">
-            </div>
-        </div>
-        <div class="col-md-2">
-            <div class="form-group">
-                <label>Salary</label>
-                <input type="number" id="newEmpSalary" placeholder="Annual salary" class="form-control">
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="form-group">
-                <label>Department</label>
-                <input type="text" id="newEmpDept" placeholder="Department" class="form-control">
-            </div>
-        </div>
-        <div class="col-md-2">
-            <div class="form-group">
-                <label>Location</label>
-                <input type="text" id="newEmpLocation" placeholder="Location" class="form-control">
-            </div>
-        </div>
-        <div class="col-md-2">
-            <div class="form-group">
-                <label>&nbsp;</label>
-                <button type="button" onclick="addEmployee()" class="btn btn-success w-100">+ Add Employee</button>
-            </div>
+                <button type="submit" class="login-btn">Login</button>
+            </form>
+            <div id="errorMessage" class="error-message"></div>
         </div>
     </div>
-</div>
-
-        <!-- Notifications and Audit Logs -->
-        <div class="card">
-            <div class="row">
-                <div class="col-md-6 mb-3">
-                    <div class="d-flex justify-content-between align-items-center mb-3">
-                        <h2>🔔 Pending Actions</h2>
-                        <button onclick="refreshAll()" class="btn btn-outline-primary btn-sm">🔄 Refresh All</button>
-                    </div>
-                    <div id="notifList"></div>
-                </div>
-                <div class="col-md-6">
-                    <h2 class="mb-3">📋 System Audit Log</h2>
-                    <div class="audit-container">
-                        <table class="table table-sm">
-                            <thead>
-                                <tr>
-                                    <th>Action</th>
-                                    <th>Details</th>
-                                    <th>Time</th>
-                                </tr>
-                            </thead>
-                            <tbody id="auditTable"></tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
-
-<script src="app.js"></script>
-<script src="server.js"></script>
 </html>
